--- a/concept.html
+++ b/concept.html
@@ -23,7 +23,7 @@
 									<!--top menu-->
 									<div id="TopMenu">
 										<span class="lp"></span>
-										<span class="rp"></span>										                     
+										<span class="rp"></span>										                      
 									</div>
 									<!--top menu END-->
 							</div>
@@ -83,27 +83,10 @@
 								<tr> 
 									<td colspan="3" height="5"></td>
 								</tr>
-								<tr> 
-									<td> 
-										<p style="font-weight:bold;font-size:24px;">公司简介:</p>
-										<p>北京金脑信科技有限公司（Beijing King Brain Infotech Co.,Ltd.）成立于2012年1月，坐落于北京市中关村创业园。公司主要从事互联网软件平台和企业应用软件平台的研究与开发。公司将目标定位于高科技企业研发，开发产品主要以软件为主，同时也参与各种项目产品开发。公司遵循用户至上的宗旨，研发符合广大用户需求的产品。<br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; 公司注重短期目标与长远战略的结合，中长期目标将逐步拓宽产品领域，涉足电子商务、信息咨询服务、移动软件开发等领域，形成以软件产业为核心的专业化经营企业。
-										</p>
-									</td>
-								</tr>
 								<tr>
 									<td>
 										<p style="font-weight:bold;font-size:24px;">企业理念:</p>
-										<p> 公司秉承“诚信、创新、和谐、共赢”的企业理念，为员工搭建起一个轻松、和谐、人文的大舞台，在这个舞台上每个人都充分展示着自我，大家同心协力共创企业辉煌同时也实现着自己的愿景。</p>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<p style="font-weight:bold;font-size:24px;">联系方式:</p>
-										<img src="images/map.jpg" width="432" height="289"/>
-										<p> 地址：北京市海淀区上地三街1号楼C段418室<br/>
-										&nbsp; &nbsp; &nbsp; &nbsp; 邮编：100085<br> 
-										&nbsp; &nbsp; &nbsp; &nbsp; 电话： 010-62986590<br/>	
-										&nbsp; &nbsp; &nbsp; &nbsp; 邮件： webmaster@kbitc.com</p>
+										<p> 公司秉承“诚信、创新、和谐、共赢”的企业理念，为员工搭建起一个轻松、和谐、人文的大舞台，在这个舞台上每个人都充分展<br/><br/>示着自我，大家同心协力共创企业辉煌同时也实现着自己的愿景。</p>
 									</td>
 								</tr>
 							</table>
@@ -118,7 +101,7 @@
 			<!--Content wrap END -->
 			<!-- Footer -->
 			<div id="Footer">
-				<span class="copyright">Copyright ? KBITC. All Rights Reserved. | <a href="http://beian.miit.gov.cn">京ICP备12010723号</a></span>    
+				<span class="copyright">Copyright © KBITC. All Rights Reserved. |<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802033138"><img src="images/gonganbeian.png"/>京公网安备 11010802033138号</a>|<a href="http://beian.miit.gov.cn">京ICP备12010723号</a></span>
 			</div>
 			<!-- Footer END -->
 		</div>
