--- a/develop.html
+++ b/develop.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="css/Main.css" type="text/css">
 		<link rel="shortcut icon" href="images/kb.ico" type="image/x-icon" />
-		<title>北京金脑信科技有限公司 &quot;关于我们&quot;</title>
+		<title>北京金脑信科技有限公司 &quot;主营业务&quot;</title>
 	</head>
  
 	<body>
@@ -23,7 +23,7 @@
 									<!--top menu-->
 									<div id="TopMenu">
 										<span class="lp"></span>
-										<span class="rp"></span>										                     
+										<span class="rp"></span>										                      
 									</div>
 									<!--top menu END-->
 							</div>
@@ -34,9 +34,9 @@
 						<div id="HeadBottom">
 							<div id="Menu">
 								<ul>
-									<li class="cur"><a href="about.html" target="_parent">关于我们</a></li>
+									<li><a href="about.html" target="_parent">关于我们</a></li>
 									<li><a href="recruitment.html" target="_parent">招聘信息</a></li>
-									<li><a href="operation.html" target="_parent">主营业务</a></li>
+									<li class="cur"><a href="operation.html" target="_parent">主营业务</a></li>
 									<li><a href="news.html" target="_parent">企业新闻</a></li>
 									<li><a href="success.html" target="_parent">成功案例</a></li>
 									<li><a href="products.html" target="_parent">产品</a></li>
@@ -59,15 +59,15 @@
 				 <!--ContentLeftPart wrap -->
 						<div id="ContentLeftPart">
 							<img src="images/CompanyIntro.jpg" style="width:195px;"/>
-							<h2>关于我们</h2>
+							<h2>主营业务</h2>
 							<div class="LeftMenuT"></div>
 							<div class="LeftMenuM">
 									<!-- tree navigation -->
 									<div class="TreeNavigation">
 										 <ul>
-												<li><a href="introduction.html">公司简介</a></li>                                        
-												<li><a href="concept.html">企业理念</a></li>
-												<li><a href="connection.html">联系方式</a></li>
+												<li><a href="develop.html">企业软件定制开发</a></li>                                        
+												<li><a href="internet.html">Internet/Intranet</a></li>
+												<li><a href="automation.html">办公自动化</a></li>
 										 </ul>    
 									</div>
 									<!-- tree navigation END -->
@@ -78,34 +78,18 @@
 					<!--ContentRightPart wrap -->
 					<div id="ContentRightPart">
 						<div class="DetailContent">
-							<h1>关于我们</h1>
+							<h1>主营业务</h1>
 							<table border="0" cellspacing="2" cellpadding="2" align="center"   >
 								<tr> 
 									<td colspan="3" height="5"></td>
 								</tr>
 								<tr> 
 									<td> 
-										<p style="font-weight:bold;font-size:24px;">公司简介:</p>
-										<p>北京金脑信科技有限公司（Beijing King Brain Infotech Co.,Ltd.）成立于2012年1月，坐落于北京市中关村创业园。公司主要从事互联网软件平台和企业应用软件平台的研究与开发。公司将目标定位于高科技企业研发，开发产品主要以软件为主，同时也参与各种项目产品开发。公司遵循用户至上的宗旨，研发符合广大用户需求的产品。<br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; 公司注重短期目标与长远战略的结合，中长期目标将逐步拓宽产品领域，涉足电子商务、信息咨询服务、移动软件开发等领域，形成以软件产业为核心的专业化经营企业。
+										<p style="font-weight:bold;font-size:24px;">企业软件定制开发:</p>
+										<p>&nbsp; &nbsp; &nbsp; &nbsp; 专业为大中小企业定制开发设计基于Internet的网络应用服务系统、电子商务系统、各种基于数据库的管理系统及<br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; 互联网应用软件解决方案（B2B、B2C、C2C 等）。根据客户的具体业务流程，提供量体裁衣的个性化服务。特别是<br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; 在物流业务管理的信息化方面积累了大量的成功经验。<br/><br/>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 我们凝聚了先进技术和优秀的管理经验，帮助海外和国内众多的企业建立起完整的网上服务及电子商务系统。
 										</p>
 									</td>
-								</tr>
-								<tr>
-									<td>
-										<p style="font-weight:bold;font-size:24px;">企业理念:</p>
-										<p> 公司秉承“诚信、创新、和谐、共赢”的企业理念，为员工搭建起一个轻松、和谐、人文的大舞台，在这个舞台上每个人都充分展示着自我，大家同心协力共创企业辉煌同时也实现着自己的愿景。</p>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<p style="font-weight:bold;font-size:24px;">联系方式:</p>
-										<img src="images/map.jpg" width="432" height="289"/>
-										<p> 地址：北京市海淀区上地三街1号楼C段418室<br/>
-										&nbsp; &nbsp; &nbsp; &nbsp; 邮编：100085<br> 
-										&nbsp; &nbsp; &nbsp; &nbsp; 电话： 010-62986590<br/>	
-										&nbsp; &nbsp; &nbsp; &nbsp; 邮件： webmaster@kbitc.com</p>
-									</td>
-								</tr>
+								</tr>						
 							</table>
 						</div>
 					</div>
@@ -118,7 +102,7 @@
 			<!--Content wrap END -->
 			<!-- Footer -->
 			<div id="Footer">
-				<span class="copyright">Copyright ? KBITC. All Rights Reserved. | <a href="http://beian.miit.gov.cn">京ICP备12010723号</a></span>    
+				<span class="copyright">Copyright © KBITC. All Rights Reserved. |<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802033138"><img src="images/gonganbeian.png"/>京公网安备 11010802033138号</a>|<a href="http://beian.miit.gov.cn">京ICP备12010723号</a></span>
 			</div>
 			<!-- Footer END -->
 		</div>
