--- a/index.html
+++ b/index.html
@@ -1,11 +1,114 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link rel="shortcut icon" href="images/kb.ico" type="image/x-icon" />
-		<title>King Brain Infotech Co., Ltd.</title>
-	</head>
-	<body>
-		<h1>On construction...</h1>
-	</body>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="shortcut icon" href="images/kb.ico" type="image/x-icon" />
+<title>北京金脑信科技有限公司</title>
+<link href="css/Main.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+<!-- Wrap main -->
+<div id="Wrap">
+	<a name="AnchorTop" id="AnchorTop"></a>
+    <!--top wrap of Head-->
+    <div id="Head">
+       <!--content of Head-->
+    	<div id="HeadContent">
+        		<!-- top of Head -->
+                <div id="HeadTop">
+                    <span id="Logo">LOGO</span>
+                    <!-- head TopRight -->
+                    <div id="HeadTopRight">
+                            <!--top menu-->
+                            <div id="TopMenu"> 
+								<span class="lp"></span>
+								<span class="rp"></span> 
+							</div>
+                            <!--top menu END-->                            
+                  </div>
+                    <!-- head TopRight END -->         
+                </div>
+        		<!-- top of Head END-->
+                <!-- bottom of Head -->
+                <div id="HeadBottom">
+                    <div id="Menu">
+                        <ul>
+                        	<li><a href="about.html" target="_parent">关于我们</a></li>
+							<li><a href="recruitment.html" target="_parent">招聘信息</a></li>
+                            <li><a href="operation.html" target="_parent">主营业务</a></li>
+                            <li><a href="news.html" target="_parent">企业新闻</a></li>
+                            <li><a href="success.html" target="_parent">成功案例</a></li>
+                            <li><a href="products.html" target="_parent">产品</a></li>
+                            <li><a href="solve.html" target="_parent">解决方案</a></li>
+							<li class="cur"><a href="index.html" target="_parent">首页</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- bottom of Head END -->
+        </div>
+        <!-- content of Head END-->        
+    </div>
+    <!--top wrap of Head END-->    
+    
+    <!--Content wrap -->
+    <div id="Content" class="HomeImg">
+    <div class="ContentBoxT"></div>
+        <!-- ContentBoxM END -->
+        <div class="ContentBoxM">        
+                <!--Home wrap -->
+                <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td width="520" valign="top"><div class="HomeIntro">
+                      <h3>公司简介<em>Company Intro</em></h3>
+                      <p><img src="images/CompanyIntro.jpg" width="200" align="left" style="margin-right:15px;" />北京金脑信科技有限公司（Beijing King Brain Infotech Co.,Ltd.）成立于2012年1月，坐落于北京市中关村创业园。公司主要从事互联网软件平台和企业应用软件平台的研究与开发。公司将目标定位于高科技企业研发，开发产品主要以软件为主，同时也参与各种项目产品开发。公司遵循用户至上的宗旨，研发符合广大用户需求的产品...<a href="about.html">more</a></p>
+                    </div>
+					<div class="HomeBusiness">
+                      <h3>主要业务<em>Business</em></h3>
+                   	  <li><img src="images/classy_icons_032.png" width="90" /><a href="develop.html">企业软件定制开发</a></li>
+                      <li><img src="images/classy_icons_099.png" width="90" /><a href="internet.html">Internet/Intranet</a></li>
+                      <li><img src="images/coolapple_005.png" width="90" /><a href="automation.html">办公自动化</a></li>
+                    <div class="Clear"></div>                  		
+                    </div>
+                    <div class="Clear"></div>
+                    </td>
+                    <td valign="top" style="background:url(images/mask_black.png);">
+					<div class="HomeCase">
+                      <h3>解决方案<em>Company Solutions</em></h3>
+                          <div>
+                          <h4><img src="images/heat01.jpg" width="130" height="100" align="left" style="margin-right:15px;" />通断时间面积法</h4>
+                          <p>                      
+                          	通断时间面积法是通过热费分摊的方式实现分户计量的一种计量方法，简称“时温法”或“SWF” 系统。它集计算机、自动控制、网络通讯、专...<a href="heatime.html">more</a></p>
+                          </div>
+                          <div>
+                          <h4><img src="images/heat05.jpg" width="130" height="100" align="left" style="margin-right:15px;" />农业大棚智能监控系统</h4>
+                          <p>                      
+                          	农业大棚智能监控系统通过实时采集农业大棚内空气温度、湿度、光照、土壤温度、土壤水分等环境参数，根据农作物生长需要进行实时智能...<a href="agricultural.html">more</a></p>
+                          </div>   
+                    </div>
+					<br/><br/>
+					<div class="HomeNews">
+                    	<h3>最新消息<em>Company News</em></h3>
+                        <div class="NewsList">                    
+							<div><em>1/2/2012</em><a href="web.html">公司网站正式上线</a></div>							
+						</div>
+                    </div>
+                    </td>
+                  </tr>
+                </table>
+                <!--Home END -->                    
+          <div class="Clear"></div>
+        </div>
+        <!-- ContentBoxM END -->
+        <div class="ContentBoxB"></div>
+    </div>
+    <!--Content wrap END -->
+    <!-- Footer -->
+    <div id="Footer">
+		<span class="copyright">Copyright © KBITC. All Rights Reserved. |<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802033138"><img src="images/gonganbeian.png"/>京公网安备 11010802033138号</a>|<a href="http://beian.miit.gov.cn">京ICP备12010723号</a></span>
+    </div>
+    <!-- Footer END -->
+</div>
+<!-- Wrap main END-->
+</body>
 </html>
