--- a/recruitment.html
+++ b/recruitment.html
@@ -34,14 +34,14 @@
 						<div id="HeadBottom">
 							<div id="Menu">
 								<ul>
-									<li><a href="about.html" target="_parent">关于我们</a></li>
-									<li class="cur"><a href="recruitment.html" target="_parent">招聘信息</a></li>
-									<li><a href="operation.html" target="_parent">主营业务</a></li>
-									<li><a href="news.html" target="_parent">企业新闻</a></li>
-									<li><a href="success.html" target="_parent">成功案例</a></li>
-									<li><a href="products.html" target="_parent">产品</a></li>
-									<li><a href="solve.html" target="_parent">解决方案</a></li>
-									<li><a href="index.html" target="_parent">首页</a></li>
+									<li><a href="about.html" target="_self">关于我们</a></li>
+									<li class="cur"><a href="recruitment.html" target="_self">招聘信息</a></li>
+									<li><a href="operation.html" target="_self">主营业务</a></li>
+									<li><a href="news.html" target="_self">企业新闻</a></li>
+									<li><a href="success.html" target="_self">成功案例</a></li>
+									<li><a href="products.html" target="_self">产品</a></li>
+									<li><a href="solve.html" target="_self">解决方案</a></li>
+									<li><a href="index.html" target="_self">首页</a></li>
 								</ul>
 							</div>
 						</div>
