--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
 			<!--Content wrap END -->
 			<!-- Footer -->
 			<div id="Footer">
-				<span class="copyright">Copyright ? KBITC. All Rights Reserved. | <a href="http://beian.miit.gov.cn">京ICP备12010723号</a></span>    
+				<span class="copyright">Copyright ? KBITC. All Rights Reserved. | <a href="https://beian.miit.gov.cn">京ICP备12010723号-3</a></span>    
 			</div>
 			<!-- Footer END -->
 		</div>
