--- a/sfa.html
+++ b/sfa.html
@@ -104,7 +104,7 @@
 			<!--Content wrap END -->
 			<!-- Footer -->
 			<div id="Footer">
-				<span class="copyright">Copyright © KBITC. All Rights Reserved. |<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802033138"><img src="images/gonganbeian.png"/>京公网安备 11010802033138号</a>|<a href="http://beian.miit.gov.cn">京ICP备12010723号</a></span>
+				<span class="copyright">Copyright © KBITC. All Rights Reserved. |<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802033138"><img src="images/gonganbeian.png"/>京公网安备 11010802033138号</a>|<a href="https://beian.miit.gov.cn">京ICP备12010723号-3</a></span>
 			</div>
 			<!-- Footer END -->
 		</div>
